--- a/urban_dictionary/pubspec.yaml
+++ b/urban_dictionary/pubspec.yaml
@@ -19,11 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^1.1.3
+  path_provider: ^0.5.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1
+  rxdart: ^0.21.0
 
 dev_dependencies:
   flutter_test:
